@@ -1,13 +1,13 @@
 <?php
 /**
-Planning Biblio, Version 2.7
+Planning Biblio, Version 2.7.15
 Licence GNU/GPL (version 2 et au dela)
 Voir les fichiers README.md et LICENSE
 @copyright 2011-2018 Jérôme Combes
 
 Fichier : ldap/import2.php
 Création : 2 juillet 2014
-Dernière modification : 29 août 2017
+Dernière modification : 27 septembre 2018
 @author Jérôme Combes <jerome@planningbiblio.fr>
 
 Description :
@@ -60,8 +60,8 @@ if($ldapconn){
 }
 
 // Préparation de la requête pour insérer les données dans la base de données
-$req="INSERT INTO `{$dbprefix}personnel` (`login`,`nom`,`prenom`,`mail`,`password`,`droits`,`arrivee`,`postes`,`actif`,`commentaires`) ";
-$req.="VALUES (:login, :nom, :prenom, :mail, :password, :droits, :arrivee, :postes, :actif, :commentaires);";
+$req="INSERT INTO `{$dbprefix}personnel` (`login`,`nom`,`prenom`,`mail`,`matricule`,`password`,`droits`,`arrivee`,`postes`,`actif`,`commentaires`) ";
+$req.="VALUES (:login, :nom, :prenom, :mail, :matricule, :password, :droits, :arrivee, :postes, :actif, :commentaires);"; 
 $db=new dbh();
 $db->CSRFToken = $CSRFToken;
 $db->prepare($req);
@@ -71,6 +71,11 @@ if($ldapbind){
   foreach($uids as $uid){
     $filter="({$config['LDAP-ID-Attribute']}=$uid)";
     $justthese=array("dn",$config['LDAP-ID-Attribute'],"sn","givenname","userpassword","mail");
+
+    if( !empty($config['LDAP-Matricule'])){
+      $justthese = array_merge($justthese, array($config['LDAP-Matricule']));
+    }
+
     $sr=ldap_search($ldapconn,$config['LDAP-Suffix'],$filter,$justthese);
     $infos=ldap_get_entries($ldapconn,$sr);
     if($infos[0][$config['LDAP-ID-Attribute']]){
@@ -79,7 +84,12 @@ if($ldapbind){
       $prenom=array_key_exists("givenname",$infos[0])?htmlentities($infos[0]['givenname'][0],ENT_QUOTES|ENT_IGNORE,"UTF-8",false):"";
       $mail=array_key_exists("mail",$infos[0])?$infos[0]['mail'][0]:"";
 
-      $values=array(":login"=>$login, ":nom"=>$nom, ":prenom"=>$prenom, ":mail"=>$mail, ":password"=> $password, ":droits"=> $droits,
+      $matricule = '';
+      if( !empty($config['LDAP-Matricule']) and !empty($infos[0][$config['LDAP-Matricule']]) ) {
+        $matricule = is_array($infos[0][$config['LDAP-Matricule']]) ? strval($infos[0][$config['LDAP-Matricule']][0]) : strval($infos[0][$config['LDAP-Matricule']]);
+      }
+
+      $values=array(":login"=>$login, ":nom"=>$nom, ":prenom"=>$prenom, ":mail"=>$mail, ":matricule"=>$matricule, ":password"=> $password, ":droits"=> $droits,
 	":arrivee"=>$date, ":postes"=> $postes, ":actif"=> $actif, ":commentaires"=> $commentaires);
 
       // Execution de la requête (insertion dans la base de données)
