@@ -1,6 +1,7 @@
 *** Version 2.7.15      (27 septembre 2018)   ***
 - Améliorations
-Export des heures de présences vers un fichier CSV (format Kelio/Bodet Software)
+Heures de présence : Export des heures de présences vers un fichier CSV (format Kelio/Bodet Software)
+LDAP : Permet l'import d'un attribut LDAP dans le champ matricule (choix de l'attribut dans la config, param LDAP-Matricule)
 
 *** Version 2.7.14      (26 avril 2018)   ***
 - Corrections
